docs/gyongyiras.css
body {
  font-size: 100%;
  --line-color: CornflowerBlue;
  --text-color: Black;
}

#output {
  position: relative;
  overflow: hidden;
  border: 1px solid grey;
  width: var(--page-width);
  height: var(--page-height);
}

.pageA5 {
  --page-width: 148mm;
  --page-height: 204mm;
  --top-margin: 30mm;
  --right-margin: 17mm;
  --bottom-margin: 10mm;
  --left-margin: 10mm;
  --font-size: 12mm;
  --side-extra-margin: 1mm;
  --top-accent-extra: calc(var(--font-size) / 3);
}

.outer .inner {
  height: calc(var(--page-height) - var(--top-margin) - var(--bottom-margin) - 1mm);
  overflow: hidden;
}

.outer #foreground {
  /* text is inside the margins */
  width: calc(var(--page-width) - var(--left-margin) - var(--right-margin) - calc(var(--side-extra-margin) * 2));
}

.outer #background {
  /* the background lines go from side to side */
  width: var(--page-width);
}

#foreground {
  /* extra 1mm inside the vertical margin line */
  padding-left: calc(var(--left-margin) + var(--side-extra-margin));
  padding-right: calc(var(--right-margin) + var(--side-extra-margin));
  color: var(--text-color);
}

#background {
  color: var(--line-color);
}

.outer {
  position: absolute;

  /* 4 mm extra space for accents on capital letters in the top row*/
  padding-top: calc(var(--top-margin) - var(--top-accent-extra));
  padding-bottom: var(--bottom-maring);
}

#backgroundOuter {
  z-index: -1;
}

.inner {
  font-size: var(--font-size);
  font-family: Kati_egyedul_v;
  white-space: pre-wrap;

  padding-top: var(--top-accent-extra); /* accents on capital letters are above the box of the font */
}

#sideMargins {
  position: absolute;
  width: calc(var(--page-width) - var(--left-margin) - var(--right-margin));
  height: 100%;
  margin-left: var(--left-margin);
  margin-right: var(--right-margin);
  border-left: 1px solid var(--line-color);
  border-right: 1px solid var(--line-color);
}

@font-face {font-family: Kati_egyedul_v;src: url(Kati_egyedul_v.otf);}
@font-face {font-family: Kati_elol_v;src: url(Kati_elol_v.otf);}
@font-face {font-family: Kati_fent_vege_v;src: url(Kati_fent_vege_v.otf);}
@font-face {font-family: Kati_fent_v;src: url(Kati_fent_v.otf);}
@font-face {font-family: Kati_kozel_vege_v;src: url(Kati_kozel_vege_v.otf);}
@font-face {font-family: Kati_kozel_v;src: url(Kati_kozel_v.otf);}
@font-face {font-family: Kati_lent_vege_v;src: url(Kati_lent_vege_v.otf);}
@font-face {font-family: Kati_lent_v;src: url(Kati_lent_v.otf);}
@font-face {font-family: Kati_tavol_vege_v;src: url(Kati_tavol_vege_v.otf);}
@font-face {font-family: Kati_tavol_v;src: url(Kati_tavol_v.otf);}

@font-face {font-family: Kati_egyedul;src: url(Kati_egyedul.otf);}
@font-face {font-family: Kati_elol;src: url(Kati_elol.otf);}
@font-face {font-family: Kati_fent_vege;src: url(Kati_fent_vege.otf);}
@font-face {font-family: Kati_fent;src: url(Kati_fent.otf);}
@font-face {font-family: Kati_kozel_vege;src: url(Kati_kozel_vege.otf);}
@font-face {font-family: Kati_kozel;src: url(Kati_kozel.otf);}
@font-face {font-family: Kati_lent_vege;src: url(Kati_lent_vege.otf);}
@font-face {font-family: Kati_lent;src: url(Kati_lent.otf);}
@font-face {font-family: Kati_tavol_vege;src: url(Kati_tavol_vege.otf);}
@font-face {font-family: Kati_tavol;src: url(Kati_tavol.otf);}

.egy {font-family: Kati_egyedul;}
.e {font-family: Kati_elol;}
.fv {font-family: Kati_fent_vege;}
.f {font-family: Kati_fent;}
.kv {font-family: Kati_kozel_vege;}
.k {font-family: Kati_kozel;}
.lv {font-family: Kati_lent_vege;}
.l {font-family: Kati_lent;}
.t {font-family: Kati_tavol;}
.tv {font-family: Kati_tavol_vege;}

@media print {
  #screen {
    display: none;
  }
}

